--- a/sample/Home.html
+++ b/sample/Home.html
@@ -6,11 +6,11 @@
     <title>Generate Token</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js" type="text/javascript"></script>
-    <link href="../Content/Office.css" rel="stylesheet" type="text/css" />
-    <link href="../Content/O365Token.css" rel="stylesheet" type="text/css" />
+    <link href="css/Office.css" rel="stylesheet" type="text/css" />
+    <link href="css/O365Token.css" rel="stylesheet" type="text/css" />
 
-    <script src="../App.js" type="text/javascript"></script>
-    <script src="Home.js" type="text/javascript"></script>
+    <script src="js/App.js" type="text/javascript"></script>
+    <script src="js/Home.js" type="text/javascript"></script>
 
 </head>
 <body>
