Streamiled the code for release 0.1

--- a/sample/index.html
+++ b/sample/index.html
@@ -14,49 +14,24 @@
 
 </head>
 <body>
-    <!-- Page content -->
-    <div id="content-main">
+<!-- Page content -->
+<div id="content-main">
 
-        <div class="padding">
-            <p><strong>Add Add-in content here.</strong></p>
-            <p>For example, this app was activated with following details:</p>
-            <table>
-                <tr>
-                    <td class="bold">Client Id:</td>
-                    <td>
-                        <input type="text" id="clientId"
-                               value="this-that-and-thisand-that"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="bold">Reply URL</td>
-                    <td>
-                        <input type="text" id="replyURL"
-                               value="https://somethingfancy.azurewebsites.net/index.html"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="bold">Resource:</td>
-                    <td id="from">
-                        <input type="text" id="resource"
-                               value="https://whatever.sharepoint.com"/>
-                    </td>
-                </tr>
-            </table>
-        </div>
-
-
-        <hr/>
-        <table>
-            <tr>
-                <td class="bold">Token</td>
-                <td>
-                    <div id="tokenHere"></div>
-                </td>
-            </tr>
-        </table>
-
-
+    <div class="padding">
+        <p>Change the tokenCallback to work for your Add-In</p>
     </div>
+
+    <hr/>
+    <table>
+        <tr>
+            <td class="bold">Token</td>
+            <td>
+                <div id="tokenHere"></div>
+            </td>
+        </tr>
+    </table>
+
+
+</div>
 </body>
 </html>
