--- a/sample (window.opener)/index.html
+++ b/sample (window.opener)/index.html
@@ -14,24 +14,24 @@
 
 </head>
 <body>
-    <!-- Page content -->
-    <div id="content-main">
+<!-- Page content -->
+<div id="content-main">
 
-        <div class="padding">
-            <p>Change the tokenCallback to work for your Add-In</p>
-        </div>
-
-        <hr/>
-        <table>
-            <tr>
-                <td class="bold">Token2.2</td>
-                <td>
-                    <div id="tokenHere"></div>
-                </td>
-            </tr>
-        </table>
-
-
+    <div class="padding">
+        <p>Change the tokenCallback to work for your Add-In</p>
     </div>
+
+    <hr/>
+    <table>
+        <tr>
+            <td class="bold">Token</td>
+            <td>
+                <div id="tokenHere"></div>
+            </td>
+        </tr>
+    </table>
+
+
+</div>
 </body>
 </html>
